# PMonad

./: .gitignore  pyproject.toml
PMonad/: categories.py  either.py  functions.py  io.py  maybe.py  mdict.py  mlist.py
PMonad/transformers/: either_t.py  maybe_t.py
examples/either_t/: word_validation.py
examples/maybe_t/: word_validation.py
src/: Categories.py  IO.py  Maybe.py  categories.py  either.py  io.py  maybe.py  mdict.py  mlist.py  utils.py
src/Transformers/: MaybeT.py
src/transformers/: either_t.py  maybe_t.py
