[project]
name = "PMonad"
version = "0.0.1"
authors = [
    { name="Fugante", email = "ignisacedia@hotmail.com"}
]
description = "A rip-off of Haskell's common classes"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "functional",
    "programming",
    "haskell",
    "monad",
    "functor",
    "applicative",
    "transformers"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
